--- a/config.cfg
+++ b/config.cfg
@@ -5,13 +5,13 @@ vectors = null
 init_tok2vec = null
 
 [system]
-gpu_allocator = "pytorch"
+gpu_allocator = null
 seed = 0
 
 [nlp]
 lang = "en"
-pipeline = ["transformer","ner"]
-batch_size = 128
+pipeline = ["lemmatizer", "tok2vec","ner"]
+batch_size = 1000
 disabled = []
 before_creation = null
 after_creation = null
@@ -22,6 +22,7 @@ tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
 
 [components.ner]
 factory = "ner"
+incorrect_spans_key = null
 moves = null
 update_with_oracle_cut_size = 100
 
@@ -31,31 +32,33 @@ state_type = "ner"
 extra_state_tokens = false
 hidden_width = 64
 maxout_pieces = 2
-use_upper = false
+use_upper = true
 nO = null
 
 [components.ner.model.tok2vec]
-@architectures = "spacy-transformers.TransformerListener.v1"
-grad_factor = 1.0
-pooling = {"@layers":"reduce_mean.v1"}
+@architectures = "spacy.Tok2VecListener.v1"
+width = ${components.tok2vec.model.encode.width}
 upstream = "*"
 
-[components.transformer]
-factory = "transformer"
-max_batch_items = 4096
-set_extra_annotations = {"@annotation_setters":"spacy-transformers.null_annotation_setter.v1"}
+[components.tok2vec]
+factory = "tok2vec"
 
-[components.transformer.model]
-@architectures = "spacy-transformers.TransformerModel.v1"
-name = "roberta-base"
+[components.tok2vec.model]
+@architectures = "spacy.Tok2Vec.v2"
 
-[components.transformer.model.get_spans]
-@span_getters = "spacy-transformers.strided_spans.v1"
-window = 128
-stride = 96
+[components.tok2vec.model.embed]
+@architectures = "spacy.MultiHashEmbed.v2"
+width = ${components.tok2vec.model.encode.width}
+attrs = ["NORM","PREFIX","SUFFIX","SHAPE"]
+rows = [5000,2500,2500,2500]
+include_static_vectors = false
 
-[components.transformer.model.tokenizer_config]
-use_fast = true
+[components.tok2vec.model.encode]
+@architectures = "spacy.MaxoutWindowEncoder.v2"
+width = 96
+depth = 4
+window_size = 1
+maxout_pieces = 3
 
 [corpora]
 
@@ -70,31 +73,38 @@ augmenter = null
 [corpora.train]
 @readers = "spacy.Corpus.v1"
 path = ${paths.train}
-max_length = 500
+max_length = 0
 gold_preproc = false
 limit = 0
 augmenter = null
 
 [training]
-accumulate_gradient = 3
 dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
 seed = ${system.seed}
 gpu_allocator = ${system.gpu_allocator}
 dropout = 0.1
+accumulate_gradient = 1
 patience = 1600
 max_epochs = 0
 max_steps = 20000
 eval_frequency = 200
 frozen_components = []
+annotating_components = []
 before_to_disk = null
 
 [training.batcher]
-@batchers = "spacy.batch_by_padded.v1"
-discard_oversize = true
-size = 2000
-buffer = 256
+@batchers = "spacy.batch_by_words.v1"
+discard_oversize = false
+tolerance = 0.2
 get_length = null
+
+[training.batcher.size]
+@schedules = "compounding.v1"
+start = 100
+stop = 1000
+compound = 1.001
+t = 0.0
 
 [training.logger]
 @loggers = "spacy.ConsoleLogger.v1"
@@ -109,23 +119,18 @@ L2 = 0.01
 grad_clip = 1.0
 use_averages = false
 eps = 0.00000001
-
-[training.optimizer.learn_rate]
-@schedules = "warmup_linear.v1"
-warmup_steps = 250
-total_steps = 20000
-initial_rate = 0.00005
+learn_rate = 0.001
 
 [training.score_weights]
-ents_per_type = null
 ents_f = 1.0
 ents_p = 0.0
 ents_r = 0.0
+ents_per_type = null
 
 [pretraining]
 
 [initialize]
-vectors = null
+vectors = ${paths.vectors}
 init_tok2vec = ${paths.init_tok2vec}
 vocab_data = null
 lookups = null
